htp: move to app-layer

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,13 +24,13 @@ noinst_HEADERS = \
 	app-layer-frames.h \
 	app-layer/ftp/parser.h \
 	app-layer.h \
-	app-layer-htp-body.h \
-	app-layer-htp-file.h \
-	app-layer-htp.h \
-	app-layer-htp-libhtp.h \
-	app-layer-htp-mem.h \
-	app-layer-htp-range.h \
-	app-layer-htp-xff.h \
+	app-layer/http/parser-body.h \
+	app-layer/http/parser-file.h \
+	app-layer/http/parser.h \
+	app-layer/http/parser-libhtp.h \
+	app-layer/http/parser-mem.h \
+	app-layer/http/parser-range.h \
+	app-layer/http/parser-xff.h \
 	app-layer-http2.h \
 	app-layer-ike.h \
 	app-layer-krb5.h \
@@ -640,13 +640,13 @@ libsuricata_c_a_SOURCES = \
 	app-layer-expectation.c \
 	app-layer/ftp/parser.c \
 	app-layer-frames.c \
-	app-layer-htp-body.c \
-	app-layer-htp.c \
-	app-layer-htp-file.c \
-	app-layer-htp-libhtp.c \
-	app-layer-htp-mem.c \
-	app-layer-htp-range.c \
-	app-layer-htp-xff.c \
+	app-layer/http/parser-body.c \
+	app-layer/http/parser.c \
+	app-layer/http/parser-file.c \
+	app-layer/http/parser-libhtp.c \
+	app-layer/http/parser-mem.c \
+	app-layer/http/parser-range.c \
+	app-layer/http/parser-xff.c \
 	app-layer-http2.c \
 	app-layer-ike.c \
 	app-layer-krb5.c \
