app-layer: websockets protocol support
Ticket: 2695

Introduces a device EnumStringU8 to ease the use of enumerations
in protocols : logging the string out of the u8,
and for detection, parsing the u8 out of the string

--- a/suricata.yaml.in
+++ b/suricata.yaml.in
@@ -279,6 +279,7 @@ outputs:
             #md5: [body, subject]
 
         #- dnp3
+        - websocket
         - ftp
         - rdp
         - nfs
@@ -923,6 +924,8 @@ app-layer:
     ftp:
       enabled: yes
       # memcap: 64mb
+    websocket:
+      #enabled: yes
     rdp:
       #enabled: yes
     ssh:
