--- a/suricata.yaml.in
+++ b/suricata.yaml.in
@@ -156,6 +156,7 @@ outputs:
         header: X-Forwarded-For
 
       types:
+        - websockets
         - alert:
             # payload: yes             # enable dumping payload in Base64
             # payload-buffer-size: 4kb # max size of payload buffer to output in eve-log
