--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -339,17 +339,17 @@ noinst_HEADERS = \
 	app-layer/tls/detect-version.h \
 	app-layer/tls/detect-random.h \
 	detect-tos.h \
-	detect-transform-casechange.h \
-	detect-transform-compress-whitespace.h \
-	detect-transform-dotprefix.h \
-	detect-transform-header-lowercase.h \
-	detect-transform-md5.h \
-	detect-transform-pcrexform.h \
-	detect-transform-sha1.h \
-	detect-transform-sha256.h \
-	detect-transform-strip-whitespace.h \
-	detect-transform-urldecode.h \
-	detect-transform-xor.h \
+	detect/transform/casechange.h \
+	detect/transform/compress-whitespace.h \
+	detect/transform/dotprefix.h \
+	detect/transform/header-lowercase.h \
+	detect/transform/md5.h \
+	detect/transform/pcrexform.h \
+	detect/transform/sha1.h \
+	detect/transform/sha256.h \
+	detect/transform/strip-whitespace.h \
+	detect/transform/urldecode.h \
+	detect/transform/xor.h \
 	detect-ttl.h \
 	detect-udphdr.h \
 	detect-uricontent.h \
@@ -952,17 +952,17 @@ libsuricata_c_a_SOURCES = \
 	app-layer/tls/detect-version.c \
 	app-layer/tls/detect-random.c \
 	detect-tos.c \
-	detect-transform-casechange.c \
-	detect-transform-compress-whitespace.c \
-	detect-transform-dotprefix.c \
-	detect-transform-header-lowercase.c \
-	detect-transform-md5.c \
-	detect-transform-pcrexform.c \
-	detect-transform-sha1.c \
-	detect-transform-sha256.c \
-	detect-transform-strip-whitespace.c \
-	detect-transform-urldecode.c \
-	detect-transform-xor.c \
+	detect/transform/casechange.c \
+	detect/transform/compress-whitespace.c \
+	detect/transform/dotprefix.c \
+	detect/transform/header-lowercase.c \
+	detect/transform/md5.c \
+	detect/transform/pcrexform.c \
+	detect/transform/sha1.c \
+	detect/transform/sha256.c \
+	detect/transform/strip-whitespace.c \
+	detect/transform/urldecode.c \
+	detect/transform/xor.c \
 	detect-ttl.c \
 	detect-udphdr.c \
 	detect-uricontent.c \
