--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -349,6 +349,7 @@ noinst_HEADERS = \
 	detect-transform-pcrexform.h \
 	detect-transform-sha1.h \
 	detect-transform-sha256.h \
+	detect-transform-strip-pseudo-headers.h \
 	detect-transform-strip-whitespace.h \
 	detect-transform-urldecode.h \
 	detect-transform-xor.h \
@@ -964,6 +965,7 @@ libsuricata_c_a_SOURCES = \
 	detect-transform-pcrexform.c \
 	detect-transform-sha1.c \
 	detect-transform-sha256.c \
+	detect-transform-strip-pseudo-headers.c \
 	detect-transform-strip-whitespace.c \
 	detect-transform-urldecode.c \
 	detect-transform-xor.c \
