--- a/suricata.yaml.in
+++ b/suricata.yaml.in
@@ -279,6 +279,7 @@ outputs:
             #md5: [body, subject]
 
         #- dnp3
+        - websocket
         - ftp
         - rdp
         - nfs
@@ -918,6 +919,10 @@ app-layer:
     ftp:
       enabled: yes
       # memcap: 64mb
+    websocket:
+      #enabled: yes
+      # Maximum used payload size, the rest is skipped
+      # max-payload-size: 65535
     rdp:
       #enabled: yes
     ssh:
