ci: run clippy without all featuresl

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -85,3 +85,6 @@ jobs:
           fi
       - run: cargo clippy --all-features --all-targets
         working-directory: rust
+      # especially without debug feature
+      - run: cargo clippy
+        working-directory: rust
